added the readmore and giphy func

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <!-- mainframe: header -->
             <div class="searchBar rounded col s12">
                 <h6 style="margin-top: 0px !important;margin-bottom: 10px !important">Search Results: </h6>
+                <h5 class="searchString" style="font-weight: 900;"></h5>
             </div>
             <!-- mainframe: spacer -->
             <div class="spacer col s12"></div>
