--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         
     </div>
     <div class="mainFrame row">
-        <div class="mainDiv col l9 m6 s12">
+        <div class="mainDiv col l9 m12 s12">
             <!-- mainframe: spacer -->
             <div class="spacer col s12"></div>
             <!-- mainframe: header -->
             <div class="searchBar rounded col s12">
                 <h6 style="margin-top: 0px !important;margin-bottom: 10px !important">Search Results: </h6>
-                <h5 class="searchString" style="font-weight: 900;"></h5>
+                <a class="favoriteButton"></a>
+                <h5 class="searchString" style="font-weight: 900;display: inline;"></h5>
             </div>
             <!-- mainframe: spacer -->
             <div class="spacer col s12"></div>
@@ -32,7 +33,7 @@
 
             </div>
         </div>
-        <div class="rightRail col l3 m6 s12 no-margin">
+        <div class="rightRail col l3 m12 s12 no-margin">
             <!-- right rail: spacer -->
             <div class="spacer col s12"></div>
             <!-- right rail: search term -->
@@ -43,16 +44,22 @@
                     <input type="text" name="searchString" id="search_text" placeholder="Search Gifs...">
                 </div>
                 <div class="searchButton valign-wrapper no-margin col s3" style="padding-top: 5px !important;">
-                    <a class="btn valign-wrapper cyan">
+                    <a class="btn valign-wrapper orange">
                         <i class="material-icons" style="margin: 0px">search</i>
                     </a>
                 </div>
             </div>
             <!-- right rail: spacer -->
             <div class="spacer col s12"></div>
-            <!-- right rail: favorited -->
-            <div class="favorited rounded col s12">
-                <h6 style="margin-top: 0px !important;margin-bottom: 10px !important">Favorited</h6>
+            <!-- right rail: favorited Searches-->
+            <div class="favorited favoritedSearches rounded col s12">
+                <h6 style="margin-top: 0px !important;margin-bottom: 10px !important">Favorited Searches</h6>
+            </div>
+            <!-- right rail: spacer -->
+            <div class="spacer col s12"></div>
+            <!-- right rail: favorited Gifs-->
+            <div class="favorited favoritedGifs rounded col s12">
+                <h6 style="margin-top: 0px !important;margin-bottom: 10px !important">Favorited Gifs</h6>
             </div>
         </div>
      </div>
