add local storage save search (not save gif yet)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- mainframe: header -->
             <div class="resultsBar rounded col s12">
                 <h6 style="margin-top: 20px !important;margin-bottom: 10px !important">Search Results: </h6>
-                <a class="favoriteButton tooltipped" data-position="top" data-tooltip="Click to Add or Remove Favorites"></a>
+                <a class="favoriteButton"></a>
                 <h5 class="searchString" style="font-weight: 900;display: inline;"></h5>
             </div>
             <!-- mainframe: spacer -->
